# Lazy-Theta-_C-_planner

./: CMakeLists.txt  LICENSE  README.md  README_CN.md
include/theta_star/: grid_map.hpp  theta_star.hpp
src/: main.cpp  theta_star.cpp
